--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8"
   }
 }
