--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@types/react": "18.2.1",
     "@types/react-dom": "18.2.2",
     "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -26,7 +24,14 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "8.39.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.3.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unicorn": "^46.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8"
   }
