--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,32 @@
 {
   "root": false,
-  "extends": ["next", "next/core-web-vitals", "prettier"]
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "parserOptions": {
+    "project": ["./tsconfig.json"]
+  },
+  "extends": [
+    "eslint:recommended",
+    "airbnb",
+    "plugin:react/jsx-runtime",
+    "plugin:unicorn/recommended",
+    "plugin:sonarjs/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "next",
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  "rules": {
+    // anyに関するルール
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unsafe-call": "error",
+    "@typescript-eslint/no-unsafe-member-access": "error",
+    "@typescript-eslint/no-unsafe-return": "error",
+    // .tsxを許可する設定
+    "react/jsx-filename-extension": [2, { "extensions": [".tsx"] }]
+  },
+  "ignorePatterns": ["**/.next/**"]
 }
