chore: install newt-client-js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.1",
     "@types/react-dom": "18.2.2",
     "autoprefixer": "10.4.14",
+    "newt-client-js": "^3.2.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
