chore: add eslint rule about default export

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,8 @@
         "namedComponents": "arrow-function",
         "unnamedComponents": "arrow-function"
       }
-    ]
+    ],
+    "import/prefer-default-export": "off"
   },
   "ignorePatterns": ["**/.next/**"]
 }
