--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,9 @@
         ".tax": "always"
       }
     ],
-    "camelcase": "off"
+    "camelcase": "off",
+    // static exportするためimgタグを使用する
+    "@next/next/no-img-element": "off"
   },
   "ignorePatterns": ["**/.next/**"]
 }
