--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.2",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
+    "html-react-parser": "^3.0.16",
     "newt-client-js": "^3.2.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
