--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,14 +34,7 @@
         "unnamedComponents": "arrow-function"
       }
     ],
-    "react/jsx-props-no-spreading": [
-      1,
-      {
-        "html": "enforce",
-        "custom": "ignore",
-        "explicitSpread": "ignore"
-      }
-    ],
+    "react/jsx-props-no-spreading": "off",
     "react/destructuring-assignment": "off",
     "import/prefer-default-export": "off",
     "import/extensions": [
