chore: disable unicorn/no-array-callback-reference rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,8 @@
           "Props": true
         }
       }
-    ]
+    ],
+    "unicorn/no-array-callback-reference": "off"
   },
   "ignorePatterns": ["**/.next/**"]
 }
