chore: adjsut workflows yarn install option

--- a/.github/workflows/CI-protect-branches.yaml
+++ b/.github/workflows/CI-protect-branches.yaml
@@ -20,7 +20,7 @@ jobs:
           cache: yarn
 
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: yarn --frozen-lockfile --ignore-optional
 
       - name: run lint
         run: yarn lint
