--- a/.github/workflows/CD-main-release.yaml
+++ b/.github/workflows/CD-main-release.yaml
@@ -1,53 +1,60 @@
-# name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
+  repository_dispatch:
+    types: [update_content]
 
-# jobs:
-#   build:
-#     if: github.ref == 'refs/heads/main'
-#     timeout-minutes: 15
-#     runs-on: ubuntu-latest
-#     concurrency:
-#       group: ${{ github.workflow }}-${{ github.ref }}
+jobs:
+  build:
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
 
-#     steps:
-#       - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: main
 
-#       - name: Use Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version-file: ./.node-version
-#           cache: yarn
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: ./.node-version
+          cache: yarn
 
-#       - name: Install dependencies
-#         run: yarn --frozen-lockfile --ignore-optional
+      - name: Install dependencies
+        run: yarn --frozen-lockfile --ignore-optional
 
-#       - name: Build
-#         run: yarn build
+      - name: Build
+        env:
+          NEWT_API_TOKEN: ${{ secrets.NEWT_API_TOKEN }}
+          SPACE_UID: ${{ secrets.SPACE_UID }}
+          APP_UID: ${{ secrets.APP_UID }}
+        run: yarn build
 
-#       - name: Upload to artifact
-#         uses: actions/upload-pages-artifact@v2
-#         with:
-#           path: ./out
+      - name: Upload to artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./out
 
-#   deploy:
-#     needs: build
-#     if: github.ref == 'refs/heads/main'
-#     timeout-minutes: 15
-#     runs-on: ubuntu-latest
-#     concurrency:
-#       group: ${{ github.workflow }}-${{ github.ref }}
-#     permissions:
-#       pages: write
-#       id-token: write
-#     environment:
-#       name: github-pages
-#       url: ${{ steps.deployment.outputs.page_url }}
+  deploy:
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
-#     steps:
-#       - name: Deploy to GitHub Pages
-#         id: deployment
-#         uses: actions/deploy-pages@v2
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
