--- a/.github/workflows/CD-main-release.yaml
+++ b/.github/workflows/CD-main-release.yaml
@@ -57,6 +57,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
