--- a/.github/workflows/CD-main-release.yaml
+++ b/.github/workflows/CD-main-release.yaml
@@ -33,6 +33,7 @@ jobs:
           NEWT_API_TOKEN: ${{ secrets.NEWT_API_TOKEN }}
           SPACE_UID: ${{ secrets.SPACE_UID }}
           APP_UID: ${{ secrets.APP_UID }}
+          NEXT_PUBLIC_GA_TAG_ID: ${{ vars.NEXT_PUBLIC_GA_TAG_ID }}
         run: yarn build
 
       - name: Add CNAME
