chore: update release workflow for sitemap config

--- a/.github/workflows/CD-main-release.yaml
+++ b/.github/workflows/CD-main-release.yaml
@@ -39,6 +39,9 @@ jobs:
       - name: Add CNAME
         run: cp ./CNAME ./out/
 
+      - name: Add _config.yml
+        run: cp ./_config.yml ./out/
+
       - name: Upload to artifact
         uses: actions/upload-pages-artifact@v2
         with:
