--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "date-fns": "^2.30.0",
     "html-react-parser": "^3.0.16",
     "newt-client-js": "^3.2.4",
-    "next": "13.3.4",
+    "next": "13.4.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
