--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "shin-taro-blog",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
